# dotgarden

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.test  GUIDE.md  LICENSE  README.md  SECURITY.md  TESTING.md  mise.toml  pyproject.toml  ruff.toml  test-docker
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: publish.yml  security.yml  tests.yml
completions/: _dotfile  dotfile.bash
dev/: bump-starter-template  publish-placeholders
dev/placeholder-packages/: README.md
dev/placeholder-packages/dot-garden/: README.md  pyproject.toml
dev/placeholder-packages/dotgardens/: README.md  pyproject.toml
dev/placeholder-packages/dotgardens/dotgardens/: __init__.py
dev/placeholder-packages/dotgardn/: README.md  pyproject.toml
docs/archive/: 2026-04-24-001-feat-supply-chain-security-plan.md
docs/plans/: 2026-04-24-001-feat-supply-chain-security-plan.md
dotgarden/: __init__.py  config.py  paths.py  registry.py  symlinks.py
dotgarden/cli/: __init__.py  main.py
dotgarden/cli/commands/: __init__.py  bootstrap.py  doctor.py  env.py  ids.py  list.py  register.py  specialize.py  status.py  unregister.py
dotgarden/cli/utils/: __init__.py  logging.py  overlays.py
examples/full/: .macos.tmux.conf  .macos.zprofile  .tmux.conf  .work.gitconfig
examples/starter/: .aliases  .gitconfig  .gitignore  .linux.gitconfig  .linux.tmux.conf  .linux.zprofile  .macos.gitconfig  .macos.tmux.conf  .macos.zprofile  .tmux.conf  .vimrc  .zprofile  README.md  __registry__.yaml  bootstrap.sh
examples/starter/_cursor/: keybindings.json  settings.json
examples/starter/_fish/: config.fish
hooks/: pre-commit
tests/: test_cli.py  test_config.py  test_local.py  test_overlay.py  test_paths.py  test_registry.py  test_specialize.py  test_symlinks.py
tests/integration/: lib.sh  run-all.sh  test_bootstrap_creates_bak.sh  test_bootstrap_idempotent.sh  test_bootstrap_variants.sh  test_dot_config_convention.sh  test_dot_config_fish_local.sh  test_dot_config_preexisting_backup.sh  test_dotfile_home_override.sh  test_ignore_files.sh  test_overlay.sh  test_overlay_dot_config_accepted.sh  test_overlay_dot_config_bare_rejected.sh  test_overlay_profile_validation.sh  test_overlay_variant_rejection.sh  test_register_overlay_routing.sh  test_register_unregister.sh  test_specialize_nested.sh  test_status_healthy_and_broken.sh  test_unsupported_inclusion.sh
(+11 files in other folders)
