[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Andrew Look"}
]
classifiers = [
  "Development Status :: 7 - Inactive",
  "License :: OSI Approved :: MIT License"
]
description = "Placeholder to prevent typosquatting of `dotgarden`. Install `dotgarden` instead."
license = "MIT"
name = "dotgardens"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"

[project.urls]
Homepage = "https://github.com/andrewlook/dotgarden"

[tool.hatch.build.targets.wheel]
packages = ["dotgardens"]
